@@ -6,6 +6,9 @@ TOOLKIT
 
   * General
 
+- Added support for the TargetGrants setting of logged S3 buckets. This
+  allows you to set default ACL access permissions for S3 bucket logs
+  generated by the service.
 - JetS3t's JMX instrumentation delegate is now re-initialized each time a 
   new S3Service is created, allowing users to enable/disable JMX logging 
   by adjusting System properties after a JVM has started. Note that it is 
@@ -15,7 +18,7 @@ TOOLKIT
   the "jets3t.mx" system property, since the "com.sun.management.jmxremote"
   property is no longer required to turn on JMX support in the JVM.
 - Improved the Windows batch scripts to correctly detect the JETS3T_HOME
-  location regardless of the current directory when the JetS3t script is run. 
+  location regardless of the current directory when the JetS3t script is run.
 
   * REST Implementation
 
@@ -32,6 +35,8 @@ KUDOS TO:
 Christian Mallwitz for the pointer to the %~dp0 script variable that greatly
 improves the Windows batch scripts. 
 
+Jawahar Lal Nayak for a patch that contributed to the new TargetGrants support
+for logged S3 buckets.
 
 -------------
 Version 0.7.1
